UHF-7481: UHF-7481: Change receipt details source order to more accessible one

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -292,7 +292,7 @@
       display: grid;
       grid-template-areas:
         'title sum'
-        'details details';
+        'details sum';
       grid-template-columns: 1fr min-content;
       grid-template-rows: auto 1fr;
     }
