--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -282,7 +282,8 @@
 
     ul {
       grid-area: details;
-      margin-block: 0;
+      margin-bottom: 0;
+      margin-top: 8px;
     }
 
     li {
