UHF-7482: Add minor bugfixes

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -297,6 +297,7 @@
 
     @include breakpoint($breakpoint-s) {
       display: grid;
+      gap: $spacing-half;
       grid-template-areas:
         'title sum'
         'details sum';
