UHF-8223: Fixed button margins in RTL languages in the cookie content blocker.

--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -126,13 +126,12 @@
       max-width: 400px; // To avoid too long buttons.
 
       @include breakpoint($breakpoint-m) {
-        margin-left: $spacing;
+        margin-inline-start: $spacing;
         margin-top: 0;
       }
 
       &:first-child {
-        margin-left: 0;
-        margin-top: 0;
+        margin: 0;
       }
     }
   }
