UHF-8223: Changed aria-label to aria-labelledby in the cookie blocker screen.

--- a/templates/module/helfi_api_base/helfi-link.html.twig
+++ b/templates/module/helfi_api_base/helfi-link.html.twig
@@ -5,7 +5,9 @@
   {% endif %}
 
   {% if 'data-is-external' in attributes|keys %}
-    {% set attribute_icon %} <span class="link__type link__type--external" aria-label="({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})"></span>{%- endset %}
+    {% set external_link_id = 'hdbt-link-' ~ random() %}
+    {% set attribute_icon %} <span class="link__type link__type--external" aria-labelledby="{{ external_link_id }}"></span>
+    <span class="is-hidden" id="{{ external_link_id }}">{{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }}</span{%- endset %}
   {% endif %}
 
   {% if 'data-protocol' in attributes|keys and attributes['data-protocol'] != 'false'%}
