--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -102,14 +102,14 @@ $-item-spacing: $spacing-triple;
       display: block;
       flex-shrink: 0;
       height: var(--icon-size);
-      margin-left: -$spacing-quarter;
+      margin-inline-start: -$spacing-quarter;
       margin-top: $spacing-half;
       mask-size: var(--icon-size) var(--icon-size);
       width: var(--icon-size);
 
       @include breakpoint($breakpoint-s) {
         --icon-size: 3rem;
-        margin-left: -$spacing-half;
+        margin-inline-start: -$spacing-half;
         margin-top: $spacing;
       }
     }
@@ -125,9 +125,9 @@ $-item-spacing: $spacing-triple;
   }
 
   .list-of-links__item__image {
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     position: absolute;
-    top: 0;
 
     // Size of thumbnails on mobile
     width: 90px;
@@ -150,10 +150,12 @@ $-item-spacing: $spacing-triple;
 
   .list-of-links__item__title {
     @include font('h4');
-    margin: 0 0 0 (100px + $spacing);
+    margin-block: 0;
+    margin-inline: (100px + $spacing) 0;
 
     @include breakpoint($breakpoint-s) {
       margin: 0;
+      margin-inline-start: 0;
     }
   }
 }
@@ -186,7 +188,7 @@ $-item-spacing: $spacing-triple;
       .link__type,
       &::after {
         align-self: flex-start;
-        margin-left: $spacing-half;
+        margin-inline-start: $spacing-half;
         margin-top: -2px; // Pull the arrow a bit higher to match the text line-height.
 
         @include breakpoint($breakpoint-s) {
@@ -202,6 +204,7 @@ $-item-spacing: $spacing-triple;
 
     .list-of-links__item__title {
       display: flex;
+      margin-inline: 0;
       margin-left: 0;
     }
 
