--- a/src/scss/06_components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/06_components/paragraphs/_liftup-with-image.scss
@@ -1,5 +1,13 @@
 $breakpoint-design-image-on-left-right: 830px;
 
+[dir="rtl"] .component--liftup-with-image-img {
+  direction: ltr;
+
+  .liftup-with-image__content {
+    direction: rtl;
+  }
+}
+
 .component--liftup-with-image-img {
   --side-padding: 10%;
   color: var(--hdbt-color-palette-text--primary);
@@ -241,6 +249,16 @@ $breakpoint-design-image-on-left-right: 830px;
 // Designs with image as background.
 .no-sidebar .components--upper > .component--liftup-with-image-bg.component--liftup-with-image-bg {
   padding-inline: 0;
+}
+
+[dir="rtl"] .component--liftup-with-image-bg {
+  .liftup-with-image {
+    direction: ltr;
+  }
+
+  .liftup-with-image__content {
+    direction: rtl;
+  }
 }
 
 .component--liftup-with-image-bg {
