--- a/src/scss/02_mixins/_tags_mixins.scss
+++ b/src/scss/02_mixins/_tags_mixins.scss
@@ -11,6 +11,7 @@ $-tag-interactive--deletable-padding: 12px 20px 12px;
   flex-wrap: wrap;
   margin-bottom: 0;
   margin-top: 0;
+  padding-inline-start: 0;
   padding-left: 0;
 }
 
