UHF-8094: Use dynamic attribute for cookie banner margin

--- a/src/scss/06_components/_eu-cookie-compliance-banner.scss
+++ b/src/scss/06_components/_eu-cookie-compliance-banner.scss
@@ -71,7 +71,7 @@
     margin-top: $spacing;
 
     @include breakpoint($breakpoint-m) {
-      margin-left: $spacing;
+      margin-inline-start: $spacing;
       margin-top: 0;
     }
   }
