Revert "UHF-8223: Fixed button margins in RTL languages in the cookie content blocker."
This reverts commit f3c584adaf99c9bba903b739a124902a615429ff.

--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -126,12 +126,13 @@
       max-width: 400px; // To avoid too long buttons.
 
       @include breakpoint($breakpoint-m) {
-        margin-inline-start: $spacing;
+        margin-left: $spacing;
         margin-top: 0;
       }
 
       &:first-child {
-        margin: 0;
+        margin-left: 0;
+        margin-top: 0;
       }
     }
   }
