UHF-0000: Added the dir attribute to cookie blocker message.

--- a/templates/misc/embedded-content-cookie-compliance.twig
+++ b/templates/misc/embedded-content-cookie-compliance.twig
@@ -1,5 +1,6 @@
 {% if current_langcode not in primary_languages %}
   {% set lang_attr = 'lang=en' %}
+  {% set dir_attr = 'dir=ltr' %}
 {% endif %}
 <div class="embedded-content-cookie-compliance media-{{ media_id }}" {{ lang_attr }} dir="ltr">
   <div class="message">
