--- a/templates/misc/embedded-content-cookie-compliance.twig
+++ b/templates/misc/embedded-content-cookie-compliance.twig
@@ -2,7 +2,7 @@
   {% set lang_attr = 'lang=en' %}
   {% set dir_attr = 'dir=ltr' %}
 {% endif %}
-<div class="embedded-content-cookie-compliance media-{{ media_id }}" {{ lang_attr }} dir="ltr">
+<div class="embedded-content-cookie-compliance media-{{ media_id }}" {{ lang_attr }} {{ dir_attr }}>
   <div class="message">
     {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'alert-circle-fill'} %}
     <h2>{{ 'Content cannot be displayed'|t }}</h2>
