--- a/templates/misc/embedded-content-cookie-compliance.twig
+++ b/templates/misc/embedded-content-cookie-compliance.twig
@@ -1,9 +1,6 @@
-{% if current_langcode not in primary_languages %}
-  {% set lang_attr = 'lang=en' %}
-  {% set dir_attr = 'dir=ltr' %}
-{% endif %}
-<div class="embedded-content-cookie-compliance media-{{ media_id }}" {{ lang_attr }} {{ dir_attr }}>
-  <div class="message">
+{% set alternative_language = current_langcode not in primary_languages %}
+<div class="embedded-content-cookie-compliance media-{{ media_id }}">
+  <div class="message" {{ alternative_language ? create_attribute({'lang': 'en', 'dir': 'ltr'}) }}>
     {% include '@hdbt/misc/icon.twig' ignore missing with {icon: 'alert-circle-fill'} %}
     <h2>{{ 'Content cannot be displayed'|t }}</h2>
     <p>
