UHF-8094: Wrap cookie banner with lang and dir attributes

--- a/src/scss/06_components/_eu-cookie-compliance-banner.scss
+++ b/src/scss/06_components/_eu-cookie-compliance-banner.scss
@@ -96,6 +96,11 @@
   }
 }
 
+// Override style from eu_cookie_compliance styles.
+[dir='ltr'] .eu-cookie-compliance-message {
+  text-align: left;
+}
+
 .sliding-popup-bottom {
   width: 100%;
 }
