--- a/src/scss/06_components/navigation/_table-of-contents.scss
+++ b/src/scss/06_components/navigation/_table-of-contents.scss
@@ -23,7 +23,7 @@
 
 .table-of-contents__container {
   background-color: $color-silver-light;
-  border-left: $spacing-half solid $color-gold;
+  border-inline-start: $spacing-half solid $color-gold;
   max-width: $spacing-and-half + $content-width-max + $spacing-and-half; // Max-width: Content max width (860px) + left and right paddings.
   padding: $spacing-double $spacing-and-half;
 }
