UHF-8094: Remove extra semicolon

--- a/src/scss/06_components/_eu-cookie-compliance-banner.scss
+++ b/src/scss/06_components/_eu-cookie-compliance-banner.scss
@@ -105,7 +105,7 @@
 [dir='ltr'] .eu-cookie-compliance-categories-buttons {
   @include breakpoint($breakpoint-m) {
     margin-left: $spacing;
-    margin-right: 0;;
+    margin-right: 0;
   }
 }
 
