UHF-8095: Fixed RTL support for proper

--- a/src/scss/05_objects/_link.scss
+++ b/src/scss/05_objects/_link.scss
@@ -28,12 +28,6 @@ a:hover .link__type {
   --external-icon-move: scaleX(var(--lang-direction, 1)) rotate(15deg);
 }
 
-[dir="rtl"] .link__style--highlight {
-  &::before {
-    @include pseudo-icon('arrow-left', calc(var(--line-height) * 1em), currentColor, inline-block);
-  }
-}
-
 .link__style--highlight {
   @include font('special.large_link');
   margin-bottom: $spacing;
@@ -43,5 +37,6 @@ a:hover .link__type {
     @include pseudo-icon('arrow-right', calc(var(--line-height) * 1em), currentColor, inline-block);
     margin-inline-end: $spacing-half;
     margin-inline-start: calc(var(--line-height) * -1em - $spacing-half);
+    transform: scaleX(var(--lang-direction, 1));
   }
 }
