--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -62,7 +62,7 @@ $-item-spacing: $spacing-triple;
         transform: scaleX(var(--lang-direction, 1)) translateX($spacing-half);
 
         @media (prefers-reduced-motion) {
-          transform: none;
+          transform: scaleX(var(--lang-direction, 1));
         }
       }
     }
@@ -120,7 +120,7 @@ $-item-spacing: $spacing-triple;
       transform: scaleX(var(--lang-direction, 1)) translate($spacing-quarter, - $spacing-quarter);
 
       @media (prefers-reduced-motion) {
-        transform: none;
+        transform: scaleX(var(--lang-direction, 1));
       }
     }
   }
