--- a/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
+++ b/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
@@ -26,7 +26,8 @@
  */
 #}
 {% if label %}
-  <h2{{ title_attributes.addClass('sidebar_block_heading') }}>{{ label }}</h2>
+  {% set alternative_language = current_langcode not in primary_languages %}
+  <h2{{ title_attributes.addClass('sidebar_block_heading') }} {{ alternative_language ? create_attribute(({ 'lang': 'en', 'dir': 'ltr' })) }}>{{ label }}</h2>
 {% endif %}
 {% block content %}
   <div class="news-listing--sidebar">
