UHF-8095: Removing unnecessary margin reset

--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -152,7 +152,7 @@ $-item-spacing: $spacing-triple;
   .list-of-links__item__title {
     @include font('h4');
     margin-block: 0;
-    margin-inline: (100px + $spacing) 0;
+    margin-inline-start: (100px + $spacing);
 
     @include breakpoint($breakpoint-s) {
       margin: 0;
