--- a/src/scss/05_objects/_button.scss
+++ b/src/scss/05_objects/_button.scss
@@ -380,6 +380,7 @@ input[type='submit'].hds-button {
       @include hover-link-arrow-transition();
       order: 3;
       position: static;
+      transform: scaleX(var(--lang-direction, 1));
     }
 
     // Handle animation for above on focus and hover
@@ -387,7 +388,7 @@ input[type='submit'].hds-button {
     &:hover:not([data-selected-icon]):not([data-is-external])::before,
     &[data-selected-icon]:focus:not([data-is-external])::after,
     &[data-selected-icon]:hover:not([data-is-external])::after {
-      transform: translateX($spacing-quarter);
+      transform: scaleX(var(--lang-direction, 1)) translateX($spacing-quarter);
       @media (prefers-reduced-motion) {
         transform: none;
       }
