--- a/templates/misc/lead-in.twig
+++ b/templates/misc/lead-in.twig
@@ -1,5 +1,9 @@
 {% if content|render %}
-  <section class="lead-in" aria-label="{{ 'Lead-in paragraph'|t({}, {'context': 'Page lead-in section explanation for screen readers'}) }}">
+  {% set alternative_language = current_langcode not in primary_languages %}
+  <section class="lead-in" aria-labelledby="lead-in__label">
+    <span id="lead-in__label" class="visually-hidden" {{ alternative_language ? create_attribute(({ 'lang': 'en', 'dir': 'ltr' })) }}>
+      {{ 'Lead-in paragraph'|t({}, {'context': 'Page lead-in section explanation for screen readers'}) }}
+    </span>
     {% embed "@hdbt/misc/component.twig" with
       {
         component_classes: [
