--- a/templates/misc/tag-list.twig
+++ b/templates/misc/tag-list.twig
@@ -3,8 +3,12 @@
 {% else %}
   {% set type_class = 'content-tags__tags--static' %}
 {% endif %}
+{% set alternative_language = current_langcode not in primary_languages %}
 
- <section class="content-tags"  aria-label="{{ 'Tags'|t({}, {'context': 'Label for screen reader software users explaining that this is a list of tags related to this page.'}) }}">
+ <section class="content-tags"  aria-labelledby='content-tags__label'>
+  <span id='content-tags__label' class='visually-hidden' {{ alternative_language ? create_attribute(({ 'lang': 'en', 'dir': 'ltr' })) }}>
+    {{ 'Tags'|t({}, {'context': 'Label for screen reader software users explaining that this is a list of tags related to this page.'}) }}
+  </span>
   <ul class="content-tags__tags {{ type_class }}">
     {% block content %}
       {% for tag in tags %}
