--- a/templates/misc/image-with-caption.twig
+++ b/templates/misc/image-with-caption.twig
@@ -2,15 +2,20 @@
   {{ image }}
 
   {% if image_caption %}
-  {% set alternative_language = current_langcode not in primary_languages %}
-  {% set figcaption_attributes = {
-      'class': [
-        'image__caption',
-      ],
-      'dir': alternative_language ? 'ltr',
-      'lang': alternative_language ? 'en'
-    }
-  %}
+    {% set alternative_language = current_langcode not in primary_languages %}
+    {% set figcaption_attributes = {
+        'class': [
+          'image__caption',
+        ]
+      }
+    %}
+    {% if alternative_language %}
+      {% set figcaption_attributes = figcaption_attributes|merge({
+          'dir': 'ltr',
+          'lang': 'en'
+        })
+      %}
+    {% endif %}
     <figcaption {{ create_attribute(figcaption_attributes) }}>
       {{ image_caption }}
     </figcaption>
