--- a/templates/misc/status-messages.html.twig
+++ b/templates/misc/status-messages.html.twig
@@ -23,6 +23,7 @@
  */
 #}
 {% set classes = ['hds-notification__content'] %}
+{% set alternative_language = current_langcode not in primary_languages %}
 
 {% for type, messages in message_list %}
   {% set section_classes = ['hds-notification'] %}
@@ -47,7 +48,7 @@
     {% set section_classes = section_classes|merge(['hds-notification--small']) %}
   {% endif %}
 
-  <section data-drupal-messages aria-label="{{ 'Notification'|t }}" class="{{ section_classes|without('messages-list')|join(' ') }}">
+  <section data-drupal-messages aria-label="{{ 'Notification'|t }}" class="{{ section_classes|without('messages-list')|join(' ') }}" {{ alternative_language ? create_attribute(({ 'lang': 'en', 'dir': 'ltr' })) }}>
     {% set is_message_with_title = status_headings[type] %}
     {% set is_message_with_icon = type in ['error', 'default', 'warning', 'success'] %}
     <div role="contentinfo" aria-labelledby="{{ title_ids[type] }}" class="{{ classes|without('messages-list__item')|join(' ') }}">
