--- a/templates/module/helfi_tpr/field--service-map-embed.html.twig
+++ b/templates/module/helfi_tpr/field--service-map-embed.html.twig
@@ -7,7 +7,7 @@
   'target': '_blank',
 } %}
 
-{% if current_langcode not in primary_languages %}
+{% if alternative_language %}
   {% set link = link|merge({'#attributes': {'lang': 'en', 'dir': 'ltr' }}) %}
 {% endif %}
 
