UHF-7115: Add role to search form

--- a/templates/component/helfi-search-form.twig
+++ b/templates/component/helfi-search-form.twig
@@ -1,4 +1,4 @@
-<form class="helfi-search__form" action="{{ helfi_search_form_url }}">
+<form class="helfi-search__form" action="{{ helfi_search_form_url }}" role="search">
   <div class="form-item hds-text-input">
     {% if label %}
       <label class="hds-text-input__label" for="search-form-{{search_id}}">{{ label }}</label>
