UHF-7115: Allow search dropdown scrolling on landscape mobile screens and fix API fallback toggle behaviour

--- a/src/scss/06_components/navigation/toggle/_nav-toggle.scss
+++ b/src/scss/06_components/navigation/toggle/_nav-toggle.scss
@@ -217,7 +217,7 @@ $label-font: 'special.navigation.icon_label';
   }
 
   // When JS is enabled, switch to use button instead of anchor
-  #{$id}[data-js] ~ * {
+  #{$id}[data-js] ~ * #{$nav-toggle-modifier} {
     .nav-toggle__anchor {
       display: none;
     }
