UHF-7115: Fix breakpoint edgecases with menus

--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -50,10 +50,10 @@
     display: none;
   }
 
-  @include breakpoint($breakpoint-l) {
+  @include breakpoint($breakpoint-m) {
     & ~ * .language-wrapper {
       display: flex;
-    }
+    } // This breakpoint needs to be in sync with branding navigation lang button position breakpoint
   }
 }
 
