--- a/src/scss/06_components/block/_header-language-links.scss
+++ b/src/scss/06_components/block/_header-language-links.scss
@@ -14,9 +14,10 @@ $-otherlangs-min-width: 240px; // From design specs
 
 .headerlanguagelinks__menu-dropdown {
   background-color: $color-silver-medium-light;
-  height: 100%;
+  height: auto; // Can not be 100% or the background will stop early on landscape mobile screens.
   list-style: none;
   margin: 0;
+  min-height: 100%;
   min-width: $-otherlangs-min-width;
   padding: $spacing;
   width: auto;
