Change some visually-hidden classes to is-hidden

--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -23,7 +23,7 @@
       {% endif %}
     </div>
     <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="announcement__close__aria-label">
-      <span id="announcement__close__aria-label" class="visually-hidden">{{ "Close announcement"|t }}</span>
+      <span id="announcement__close__aria-label" class="is-hidden">{{ "Close announcement"|t }}</span>
     </button>
   </div>
 </div>
