--- a/templates/paragraphs/paragraph--contact-card.html.twig
+++ b/templates/paragraphs/paragraph--contact-card.html.twig
@@ -19,6 +19,7 @@
     {% endif %}
     {% if content.field_contact_title|render %}
       <div class="contact-card--person-information">
+        <div class="label visually-hidden">{{ 'Title'|t({}, {'context': 'Contact card paragraph field labels'}) }}</div>
         {{ content.field_contact_title }}
       </div>
     {% endif %}
