--- a/templates/paragraphs/paragraph--calculator.html.twig
+++ b/templates/paragraphs/paragraph--calculator.html.twig
@@ -25,10 +25,10 @@
 
         {% if calculator_name in [
           'home_care_service_voucher',
-          'home_care_client_payment',
-          'daycare_payment',
-          'service_housing_service_voucher',
-          'family_with_kids_home_service_client_payment',
+          'home_care_client_fee',
+          'early_childhood_education_fee',
+          'continuous_housing_service_voucher',
+          'families_home_services_client_fee',
         ] %}
 
           <script src="/themes/contrib/hdbt/dist/js/{{calculator_name}}.min.js"></script>
