--- a/src/scss/04_elements/_typography.scss
+++ b/src/scss/04_elements/_typography.scss
@@ -4,9 +4,17 @@ h3,
 h4,
 h5,
 h6 {
-  hyphens: auto;
   margin-bottom: 0;
   margin-top: $spacing-triple;
+}
+
+// h1 hyphenation is handled separately
+h2,
+h3,
+h4,
+h5,
+h6 {
+  hyphens: auto;
   overflow-wrap: break-word;
 }
 
