--- a/templates/module/helfi_tpr/field--service-map-embed.html.twig
+++ b/templates/module/helfi_tpr/field--service-map-embed.html.twig
@@ -8,7 +8,7 @@
 } %}
 
 {% if alternative_language %}
-  {% set link = link|merge({'#attributes': {'lang': 'en', 'dir': 'ltr' }}) %}
+  {% set link = link|merge({'#attributes': {'lang': attributes.lang, 'dir': attributes.dir }}) %}
 {% endif %}
 
 {% set iframe_attributes = element[0]['iframe']['#attributes'] %}
