--- a/templates/paragraphs/paragraph--calculator.html.twig
+++ b/templates/paragraphs/paragraph--calculator.html.twig
@@ -31,7 +31,7 @@
           'families_home_services_client_fee',
         ] %}
 
-          <script src="/themes/contrib/hdbt/dist/js/{{calculator_name}}.min.js"></script>
+          <script src="{{ theme_path }}/dist/js/{{calculator_name}}.min.js"></script>
           <script>
             document.addEventListener('DOMContentLoaded', (event) => {
               const clean = window.helfi_calculator.{{calculator_name}}('{{ helfi_calculator_id }}', drupalSettings.{{calculator_name}});
