UHF-8095: Fixed the fallback lang attributes so that they are not added to everything.

--- a/templates/module/helfi_tpr/field--service-map-embed.html.twig
+++ b/templates/module/helfi_tpr/field--service-map-embed.html.twig
@@ -8,7 +8,7 @@
 } %}
 
 {% if alternative_language %}
-  {% set link = link|merge({'#attributes': {'lang': attributes.lang, 'dir': attributes.dir }}) %}
+  {% set link = link|merge({'#attributes': {'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir }}) %}
 {% endif %}
 
 {% set iframe_attributes = element[0]['iframe']['#attributes'] %}
