--- a/templates/content/social-media-links.html.twig
+++ b/templates/content/social-media-links.html.twig
@@ -14,8 +14,8 @@
       } %}
       {% if use_lang_attributes %}
         {% set link_attributes = link_attributes|merge({
-          'dir': attributes.dir,
-          'lang': attributes.lang
+          'dir': lang_attributes.fallback_dir,
+          'lang': lang_attributes.fallback_lang
         }) 
         %}
       {% endif %}
