--- a/templates/field/field--toc-enabled.html.twig
+++ b/templates/field/field--toc-enabled.html.twig
@@ -10,8 +10,8 @@
         %}
         {% if alternative_language %}
           {% set title_attributes = title_attributes|merge({
-              'dir': attributes.dir,
-              'lang': attributes.lang
+              'dir': lang_attributes.fallback_dir,
+              'lang': lang_attributes.fallback_lang
             })
           %}
         {% endif %}
