--- a/templates/layout/region--footer-bottom.html.twig
+++ b/templates/layout/region--footer-bottom.html.twig
@@ -44,8 +44,8 @@
       %}
       {% if alternative_language %}
         {% set skip_link_attributes = skip_link_attributes|merge({
-            'dir': attributes.dir,
-            'lang': attributes.lang
+            'dir': lang_attributes.fallback_dir,
+            'lang': lang_attributes.fallback_lang
           }) 
         %}
       {% endif %}
