--- a/templates/media/media--hel-map.html.twig
+++ b/templates/media/media--hel-map.html.twig
@@ -43,7 +43,7 @@
 } %}
 
 {% if alternative_language %}
-  {% set link = link|merge({'#attributes': {'lang': attributes.lang, 'dir': attributes.dir }}) %}
+  {% set link = link|merge({'#attributes': {'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir }}) %}
 {% endif %}
 
 {% set drupal_settings = {
