--- a/templates/misc/lead-in.twig
+++ b/templates/misc/lead-in.twig
@@ -1,6 +1,6 @@
 {% if content|render %}
   <section class="lead-in" aria-labelledby="lead-in__label">
-    <span id="lead-in__label" class="is-hidden" {{ alternative_language ? create_attribute(({ 'lang': attributes.lang, 'dir': attributes.dir })) }}>
+    <span id="lead-in__label" class="is-hidden" {{ alternative_language ? create_attribute(({ 'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir })) }}>
       {{ 'Lead-in paragraph'|t({}, {'context': 'Page lead-in section explanation for screen readers'}) }}
     </span>
     {% embed "@hdbt/misc/component.twig" with
