UHF-6856: Fixed card icon as working anchor link

--- a/src/scss/05_objects/_card.scss
+++ b/src/scss/05_objects/_card.scss
@@ -57,6 +57,7 @@ $item-gap: $spacing-half;
     flex-grow: 1;
     margin-top: $spacing;
     mask-position: bottom center;
+    pointer-events: none;
 
     @include breakpoint($breakpoint-m) {
       --icon-size: #{$spacing-triple};
